# linkedin-evaluation

./: Dockerfile  README.md  main.py  pyproject.toml  services.py
entities/: articles.py  career.py  connections.py  description_classification.py  description_experience.py  education.py  experience.py  fixtures.py  hard_skills.py  key_words.py  loader.py  recommendations.py  scoring.py  seller.py  skills.py  stacks.py  summary.py  utils.py
entities/data/career/: Back-end  Front-end  Full-stack  Full-stack mobile  Mobile
entities/data/description/: job_description.csv
entities/data/dfs/: df_predict_career.parquet  df_validate_desc.parquet
entities/data/hard_skills/: Angular  CSharpDotNet  Node  React  Vue
entities/data/invalid_titles/: linkedin titles valid_invalid - Titles.csv
entities/data/key_words/: leadership  pleno  senior  technical_coordination
entities/data/payloads/: seller_1.json  seller_2.json  seller_4.json  seller_5.json  seller_6.json
entities/data/universities/: brasil_public_universities  degree  initials
entities/models/: model_career_desc.h5  model_desc_valid.h5
entities/models/model_career_desc/: saved_model.pb
entities/models/model_career_desc/variables/: variables.data-00000-of-00001  (+1 more)
entities/models/model_desc_valid/: saved_model.pb
entities/tests/: test_articles.py  test_career.py  test_connections.py  test_description_experience.py  test_education.py  test_experience.py  test_hard_skills.py  test_key_words.py  test_recommendations.py  test_scores.py  test_skills.py  test_stacks.py  test_summary.py  test_utils.py
(+2 files in other folders)
