[tool.poetry]
name = "linkedin-evaluation-docker"
version = "0.1.0"
description = ""
authors = ["giovanna <gipalu34@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.8.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pandas = "^1.4.2"
pendulum = "^2.1.2"
numpy = "^1.22.3"
spacy = "^3.2.4"
sklearn = "^0.0"
fastparquet = "^0.8.1"
gunicorn = "^20.1.0"
scipy = "^1.8.0"
loguru = "^0.6.0"
pytest = "^7.1.2"
colorama = "^0.4.5"
pytest-factoryboy = "^2.5.0"
strsimpy = "^0.2.1"
gensim = "^4.2.0"
pandas-ml = "^0.6.1"
nltk = "^3.7"
lime = "^0.2.0"
tensorflow = "^2.9.1"
transformers = "^4.21.2"
tensorflow-hub = "^0.12.0"
tensorflow-text = "^2.9.0"
tf-models-official = "^2.9.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
tensorflow-gpu = "^2.10.0"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
